<resources>
	<string name="app_name">GetPlus POS</string>
	<string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
	<string name="action_settings">Settings</string>
	<string name="title_activity_cashier_home">GetPlus POS</string>

	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>

	<string name="titleMessege">Information</string>
	<string name="TitleScanQRKartu">Scan QR Card</string>
	<string name="TitleConfirmation">Confirmation</string>

	<string name="hintVoucher">Kode voucher</string>
	<string name="hintCardNumber">Nomor kartu</string>
	<string name="hintHarapTunggu">Harap tunggu</string>
	<string name="hintAdjustAmount">Masukan poin</string>

	<string name="strBtnOK">OK</string>
	<string name="strBtnCancel">Cancel</string>
	<string name="strPoint">MyPoint 100000</string>
	<string name="strFlashOff">Off</string>
	<string name="strFlashOn">On</string>
	<string name="strScanQR">Scan QR Card pelanggan\npada area yang telah ditentukan</string>
	<string name="strMerchantName">GetPlus\nDepartement Store</string>
	<string name="strMerchantAddr">Jl. Letjen S Parman Kav. 77\nJakarta Barat 11410</string>
	<string name="strConfirmDate">TGL :%s</string>
	<string name="strConfirmTime">JAM :%s</string>
	<string name="strConfirmRef">REF :%s</string>
	<string name="strConfirmInvoice">Invoice : %s</string>
	<string name="strConfirmBuktiBayar">Bukti Pembayaran</string>
	<string name="strConfirmTipe">Tipe</string>
	<string name="strConfirmBayar">Bayar</string>
	<string name="strConfirmTotal">Total</string>
	<string name="strConfirmNilai">Rp %s</string>
	<string name="strConfirmThanks">Terima kasih atas kunjungan anda</string>
	<string name="strConfirmCash">Cash</string>
	<string name="strConfirmElectronic">Debit / Kredit / Flazz BCA</string>
	<string name="strConfirmVoucher">Voucher</string>
	<string name="strConfirmPoin">GetPlus Poin</string>
	<string name="strConfirmSelesai">Selesai</string>
	<string name="strConfirmAdjust">Adjustment</string>
	<string name="strCardNumber">Reference</string>
	<string name="strPointsBalance">Points Balance : Rp %s</string>
	<string name="strTransactionID">Transaction ID : %s</string>
	<string name="strGetPlusID">GetPlus ID</string>
	<string name="strEVoucher">Kode Voucher</string>
	<string name="strKonfirmasi">KONFIRMASI</string>
  <string name="strBerhasil">BERHASIL</string>
  <string name="strEVoucherBerhasil">Penggunaan eVoucher telah berhasil diproses</string>

	<string name="msgWait">Please wait</string>
	<string name="msgBrandDetail">Get brand detail</string>
	<string name="msgConnectionError">Check internet connection</string>
	<string name="msgUnknownError">Unknown error</string>
	<string name="msgServerFailure">Unknown server</string>
	<string name="msgDataCustomer">Input customer number</string>
	<string name="msgDataRefKartu">Masukan nomor kartu</string>
	<string name="msgDataRefVoucher">Masukan nomor voucher</string>
	<string name="msgTransaksiCash">Proses transaksi cash</string>
	<string name="msgTransaksiAdjust">Transaksi adjustment</string>
	<string name="msgTransaksiVoucher">Proses transaksi voucher</string>
	<string name="msgTransaksiPoin">Proses transaksi poin</string>
	<string name="msgCheckVoucher">Proses cek voucher</string>
	<string name="msgProdukKosong">Data produk kosong</string>
	<string name="msgUsernameEmpty">Masukan username</string>
	<string name="msgGetPlusIDEmpty">Masukan GetPlus ID</string>
	<string name="msgEVoucherEmpty">Masukan Kode Voucher</string>
	<string name="msgPasswordEmpty">Masukan password</string>
	<string name="msgNoReffEmpty">Masukan Nomor Reff</string>
	<string name="msgMerchantIDEmpty">Masukan Merchant ID</string>
	<string name="msgLoginFailed">Login failed</string>
	<string name="msgLogoutApp">Tutup aplikasi ?</string>
	<string name="msgPakaiVoucher">Apakah anda yakin akan menggunakan eVoucher ini ?</string>
  <string name="msgEmptyProduct">Tentukan jumlah barang</string>
  <string name="haloo">haloo</string>
	<string name="msgImage1Empty">Photo 1 belum ada</string>
  <string name="msgProsesLogin">Sedang proses login</string>
  <string name="msgKoneksiError">Tidak ada koneksi</string>
  <string name="msgBarangKosong">Barang belum dipilih</string>
</resources>
