<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<android.support.design.widget.AppBarLayout
		android:id="@+id/ablConfirmTop"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:theme="@style/AppTheme.AppBarOverlay">

		<android.support.v7.widget.Toolbar
			android:id="@+id/confirmtoolbar"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			android:background="?attr/colorPrimary"
			app:popupTheme="@style/AppTheme.PopupOverlay" />
	</android.support.design.widget.AppBarLayout>

	<RelativeLayout
		android:layout_below="@id/ablConfirmTop"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="#5a5a5a">

		<ImageView
			android:id="@+id/ivConfirmBack"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:srcCompat="@drawable/bg_receipt"
			android:scaleType="fitCenter"/>

		<TextView
			android:id="@+id/tvMerchantName"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="55dp"
			android:layout_marginEnd="55dp"
			android:text="@string/strMerchantName"
			android:textStyle="bold"
			android:textColor="@color/pureBlack"
			android:textSize="18sp"
			android:textAlignment="center"/>

		<TextView
			android:id="@+id/tvMerchantAddr"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="55dp"
			android:layout_marginEnd="55dp"
			android:text="@string/strMerchantAddr"
			android:textAlignment="center"
			android:textSize="12sp"
			android:layout_below="@id/tvMerchantName"/>

		<LinearLayout
			android:id="@+id/ll1"
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="55dp"
			android:layout_marginEnd="55dp"
			android:layout_marginTop="10dp"
			android:layout_below="@id/tvMerchantAddr">

			<TextView
				android:id="@+id/tvConfirmDate"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/strConfirmDate"
				android:textSize="12sp"/>

			<TextView
				android:id="@+id/tvConfirmTime"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/strConfirmTime"
				android:textAlignment="textEnd"
				android:textSize="12sp"/>
		</LinearLayout>

		<LinearLayout
			android:id="@+id/ll2"
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="55dp"
			android:layout_marginEnd="55dp"
			android:layout_marginTop="5dp"
			android:layout_below="@id/ll1">

			<TextView
				android:id="@+id/tvConfirmRef"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/strConfirmRef"
				android:textSize="12sp"/>

			<TextView
				android:id="@+id/tvConfirmInvoice"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/strConfirmInvoice"
				android:textAlignment="textEnd"
				android:textSize="12sp"/>
		</LinearLayout>

		<TextView
			android:layout_marginStart="55dp"
			android:layout_marginEnd="55dp"
			android:id="@+id/tvDetailBrand"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textStyle="bold"
			android:textColor="@color/pureBlack"
			android:layout_below="@id/ll2"
			android:layout_marginTop="5dp"
			android:textSize="14sp"/>

		<TextView
			android:id="@+id/tvMerchantTitle1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/tvDetailBrand"
			android:layout_marginStart="55dp"
			android:layout_marginTop="7dp"
			android:layout_marginEnd="55dp"
			android:singleLine="true"
			android:text="-----------------------------------------------------------------------------"
			android:textAlignment="center"
			android:textSize="12sp" />
		<TextView
			android:id="@+id/tvMerchantTitle2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/tvMerchantTitle1"
			android:layout_marginStart="55dp"
			android:layout_marginEnd="55dp"
			android:singleLine="true"
			android:text="@string/strConfirmBuktiBayar"
			android:textAlignment="center"
			android:textSize="16sp" />
		<TextView
			android:id="@+id/tvMerchantTitle3"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/tvMerchantTitle2"
			android:layout_marginStart="55dp"
			android:layout_marginEnd="55dp"
			android:singleLine="true"
			android:text="-----------------------------------------------------------------------------"
			android:textAlignment="center"
			android:textSize="12sp" />

		<LinearLayout
			android:id="@+id/llTotal"
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="55dp"
			android:layout_marginEnd="55dp"
			android:layout_marginTop="7dp"
			android:layout_below="@id/tvMerchantTitle3">

			<TextView
				android:id="@+id/tvTotal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/strConfirmTotal"
				android:textStyle="bold"
				android:textColor="@color/pureBlack"
				android:textSize="12sp"/>

			<TextView
				android:id="@+id/tvIsiTotal"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textAlignment="textEnd"
				android:text="@string/strConfirmNilai"
				android:textStyle="bold"
				android:textColor="@color/pureBlack"
				android:textSize="12sp"/>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/llBayar"
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="55dp"
			android:layout_marginEnd="55dp"
			android:layout_marginTop="5dp"
			android:layout_below="@id/llTotal">

			<TextView
				android:id="@+id/tvBayar"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/strConfirmBayar"
				android:textColor="@color/colorAccent"
				android:textSize="12sp"/>

			<TextView
				android:id="@+id/tvIsiBayar"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textAlignment="textEnd"
				android:textColor="@color/colorAccent"
				android:text="@string/strConfirmNilai"
				android:textSize="12sp"/>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/llPoin"
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="55dp"
			android:layout_marginEnd="55dp"
			android:layout_marginTop="5dp"
			android:layout_below="@id/llBayar">

			<TextView
				android:id="@+id/tvPoin"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/strConfirmPoin"
				android:textColor="@color/scanQR_frame"
				android:textSize="12sp"/>

			<TextView
				android:id="@+id/tvIsiPoin"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textAlignment="textEnd"
				android:textColor="@color/scanQR_frame"
				android:textSize="12sp"/>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/llTipe"
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="55dp"
			android:layout_marginEnd="55dp"
			android:layout_marginTop="5dp"
			android:layout_below="@id/llPoin">

			<TextView
				android:id="@+id/tvTipe"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/strConfirmTipe"
				android:textSize="12sp"/>

			<TextView
				android:id="@+id/tvIsiTipe"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textAlignment="textEnd"
				android:textSize="12sp"/>
		</LinearLayout>

		<ScrollView
			android:layout_marginTop="5dp"
			android:layout_marginStart="5dp"
			android:layout_marginEnd="5dp"
			android:layout_below="@id/ivConfirmBack"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			
			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<LinearLayout
					android:id="@+id/llCardNumber"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:layout_centerHorizontal="true">

					<TextView
						android:id="@+id/tvCardNumber"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/strCardNumber"
						android:textColor="@color/pureWhite"/>

					<EditText
						android:id="@+id/etCardNumber"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginLeft="10dp"
						android:hint="@string/hintCardNumber"
						android:inputType="number"
						android:textColor="@color/pureWhite"/>

					<ImageView
						android:id="@+id/ivSearchCardNumber"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						app:srcCompat="@android:drawable/ic_menu_search"
						android:layout_marginLeft="10dp"
						android:layout_gravity="center_vertical"/>

					<ImageView
						android:id="@+id/ivScanCardNumber"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						app:srcCompat="@drawable/ic_camera"
						android:layout_marginLeft="10dp"
						android:layout_gravity="center_vertical"/>
				</LinearLayout>

				<RadioGroup
					android:id="@+id/rgPembayaran"
					android:orientation="vertical"
					android:layout_below="@id/llCardNumber"
					android:layout_marginTop="15dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<LinearLayout
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:orientation="horizontal">

						<RadioButton
							android:id="@+id/rbConfirmCash"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/strConfirmCash"
							android:textColor="@color/pureWhite"/>

						<RadioButton
							android:layout_marginLeft="20dp"
							android:id="@+id/rbConfirmElectronic"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginStart="10dp"
							android:text="@string/strConfirmElectronic"
							android:textColor="@color/pureWhite"/>
					</LinearLayout>

					<LinearLayout
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:orientation="horizontal">

						<RadioButton
							android:id="@+id/rbConfirmVoucher"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/strConfirmVoucher"
							android:textColor="@color/pureWhite"
							android:layout_gravity="center_vertical"/>

						<LinearLayout
							android:layout_marginStart="10dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:orientation="horizontal"
							android:id="@+id/llIsiVoucher"
							android:visibility="gone">

							<EditText
								android:id="@+id/etNoVoucher"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:hint="@string/hintVoucher"/>

							<ImageView
								android:id="@+id/ivNoVoucher"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								app:srcCompat="@android:drawable/ic_menu_search"
								android:layout_marginLeft="10dp"
								android:layout_gravity="center_vertical"/>

							<ImageView
								android:id="@+id/ivScanNoVoucher"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								app:srcCompat="@drawable/ic_camera"
								android:layout_marginLeft="10dp"
								android:layout_gravity="center_vertical"/>
						</LinearLayout>
					</LinearLayout>

					<LinearLayout
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:orientation="horizontal">

						<RadioButton
							android:id="@+id/rbConfirmPoin"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/strConfirmPoin"
							android:textColor="@color/pureWhite"/>
					</LinearLayout>

					<LinearLayout
						android:id="@+id/llConfirmAdjust"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:orientation="horizontal">

						<RadioButton
							android:id="@+id/rbConfirmAdjust"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/strConfirmAdjust"
							android:textColor="@color/pureWhite"/>

						<EditText
							android:layout_marginLeft="20dp"
							android:id="@+id/etConfirmAdjust"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:layout_marginStart="20dp"
							android:hint="@string/hintAdjustAmount"
							android:inputType="number"
							android:textColor="@color/pureWhite"
							android:visibility="gone"/>
					</LinearLayout>
				</RadioGroup>

				<Button
					android:id="@+id/btnConfirm"
					android:layout_width="match_parent"
					android:layout_height="40dp"
					android:layout_below="@id/rgPembayaran"
					android:layout_centerHorizontal="true"
					android:layout_marginTop="25dp"
					android:layout_marginStart="25dp"
					android:layout_marginLeft="25dp"
					android:layout_marginRight="25dp"
					android:layout_marginEnd="25dp"
					android:textColor="@color/pureBlack"
					android:background="@drawable/rectroundwhite"
					android:text="@string/strConfirmSelesai" />
			</RelativeLayout>
		</ScrollView>
	</RelativeLayout>
</RelativeLayout>